--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
         initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/intro.css">
-	<link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
-	<link href="https://fonts.googleapis.com/css?family=Pacifico|Teko&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Pacifico|Teko&display=swap" rel="stylesheet">
     <script src="https://code.jquery.com/jquery-3.4.1.js" integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU=" crossorigin="anonymous"></script>
     <title>Welcome</title>
 
@@ -47,7 +47,7 @@
             </div>
         </div>
     </div>
-	<div id="intro-part">
+    <div id="intro-part">
         <div class="minimize-nav"><a href="https://gaharavara.github.io">-</a></div>
         <div class="intro1">
             <div id="signature" class="signature1">
@@ -77,10 +77,10 @@
         </div>
 
     </div>
-	<script src="mgGlitch.min.js"></script>
+    <script src="mgGlitch.min.js"></script>
     <script type="text/javascript">
         alert("yeah js is on");
-		
+
         // NavBar Magic
         var home_visible = true;
 
@@ -89,6 +89,7 @@
                 document.getElementById("home-page").style.display = "none";
                 document.getElementsByTagName("body")[0].style.display = "none";
                 document.getElementsByTagName("html")[0].style.display = "none";
+                $("body").addClass("no-after");
                 document.getElementById("intro-part").style.display = "block";
                 document.getElementsByTagName("html")[0].style.display = "block";
                 document.getElementsByTagName("body")[0].style.display = "block";
@@ -103,8 +104,8 @@
             alert("clicked menu OOpks");
             reset_home();
         });
-	
-	//Glitch Function
+
+        //Glitch Function
         $(function() {
             $(".glitch-img").mgGlitch({
                 // set 'true' to stop the plugin
@@ -127,17 +128,18 @@
                 glitch2TimeMax: 100,
             });
         });
-        
+
         // Headline Switch
-        var li = [":D",":O",":o",":",":|",":)"];
-        var i=0;
-        function changeHeadline(){
-            if(i<6){
-                signature.innerHTML = "Hi, I am<br>Abhishek<br>"+li[i];
+        var li = [":D", ":O", ":o", ":", ":|", ":)"];
+        var i = 0;
+
+        function changeHeadline() {
+            if (i < 6) {
+                signature.innerHTML = "Hi, I am<br>Abhishek<br>" + li[i];
                 ++i;
-            }else{
-                i=0;
-            }    
+            } else {
+                i = 0;
+            }
         }
         setInterval(changeHeadline, 1000);
         //Brand Font
@@ -159,7 +161,7 @@
         //setInterval(changeSignature, 1000);
 
         //Scroll Event
-        
+
         var lastScrollTop = 0;
         $(window).scroll(function(event) {
             var st = $(this).scrollTop();
@@ -168,7 +170,7 @@
                 signature.innerHTML = "Scrolling Down:p";
             } else {
                 // upscroll code
-                                signature.innerHTML = "Scrolling UP:p";
+                signature.innerHTML = "Scrolling UP:p";
             }
             lastScrollTop = st;
         });
