--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/intro.css">
     <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" media="screen" href="css/style.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Pacifico|Teko&display=swap" rel="stylesheet">
     <script src="https://code.jquery.com/jquery-3.4.1.js" integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU=" crossorigin="anonymous"></script>
@@ -17,7 +18,6 @@
 </head>
 
 <body>
-
     <div id="home-page">
         <header>
             <nav>
@@ -49,6 +49,9 @@
         </div>
     </div>
 
+    <!-- particles.js container -->
+    <div id="particles-js"></div>
+
     <div id="intro-part">
         <div class="minimize-nav" id="intro-nav"><a href="https://gaharavara.github.io">-</a></div>
         <div class="intro1">
@@ -73,12 +76,16 @@
             </div>
             <div class="container">
                 <div class="mypic glitch-img">
-                    <img src="dp-final.png">
+                    <img src="static/dp-final.png">
                 </div>
             </div>
         </div>
     </div>
-    <script src="mgGlitch.min.js"></script>
+    <!-- Particles.js -->
+    <script src="js/particles.min.js"></script>
+    <script src="js/app.js"></script>
+    <!-- Glitch Effect -->
+    <script src="js/mgGlitch.min.js"></script>
     <script type="text/javascript">
         // NavBar Magic
         var home_visible = true;
@@ -88,6 +95,7 @@
                 document.getElementById("home-page").style.display = "none";
                 document.getElementsByTagName("body")[0].style.display = "none";
                 document.getElementsByTagName("html")[0].style.display = "none";
+                document.getElementById("particles-js").style.display = "none";
                 $("body").addClass("no-after");
                 document.getElementById("intro-part").style.display = "block";
                 document.getElementsByTagName("html")[0].style.display = "block";
