Remove the styling of intro div.
Removing the intro text part present on the left side of the menu
page opened on clicking the navigation button for better styling.

--- a/index.html
+++ b/index.html
@@ -55,11 +55,11 @@
     <div id="intro-part">
         <div class="minimize-nav" id="intro-nav"><a href="https://gaharavara.github.io">-</a></div>
         <div class="intro1">
-            <div id="signature" class="signature1">
+            <!--<div id="signature" class="signature1">
                 Hi, I am
                 <br>Abhishek
                 <br> :D
-            </div>
+            </div>-->
             <div class="divider"></div>
         </div>
 
@@ -135,6 +135,7 @@
             });
         });
 
+/*
         // Headline Switch
         var li = [":D", ":O", ":o", ":", ":|", ":)"];
         var i = 0;
@@ -165,7 +166,7 @@
             }
         }
         //setInterval(changeSignature, 1000);
-
+*/
         //Scroll Event
 
         var lastScrollTop = 0;
