Add design to about me.
Added interlaced design to about me page and included Blog and Interests
category. The background design is taken from toptal.com.

--- a/index.html
+++ b/index.html
@@ -99,6 +99,7 @@
                 <div class="home"><a href="https://gaharavara.github.io">Home</a></div>
                 <div class="about-me"><a href="">About Me</a></div>
                 <div class="my-works"><a href="">My Works</a></div>
+                <div class="blogs"><a href="">Blog | Interests</a></div>
                 <div class="reach-me"><a href="">How To Reach Me</a></div>
             </div>
             <div class="container">
